2017-01-24  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/alpha/bits/pthreadtypes.h: Move to ...
	* sysdeps/alpha/nptl/bits/pthreadtypes.h: ... here.
	* sysdeps/unix/sysv/linux/powerpc/bits/pthreadtypes.h: Move to ...
	* sysdeps/powerpc/nptl/bits/pthreadtypes.h: ... here.
	* sysdeps/x86/bits/pthreadtypes.h: Move to ...
	* sysdeps/x86/nptl/bits/pthreadtypes.h: ... here.
	* sysdeps/unix/sysv/linux/x86/Implies: New file.

2017-01-24  James Clarke  <jrtc27@jrtc27.com>

	[BZ #21053]
	* sysdeps/unix/sysv/linux/sh/sh3/ucontext_i.sym: Use new REG_R*
	constants instead of the old R* ones.
	* sysdeps/unix/sysv/linux/sh/sh4/ucontext_i.sym: Likewise.
	* sysdeps/unix/sysv/linux/sh/sys/ucontext.h (NGPREG): Rename...
	(NGREG): ... to this, to fit in with other architectures.
	(gpregset_t): Use new NGREG macro.
	[__USE_GNU]: Remove condition; all architectures other than tile
	are unconditional.
	(R*): Rename to REG_R*.

2017-01-20  DJ Delorie  <dj@redhat.com>

	* elf/dl-tunables.c (tunable_set_val_if_valid_range): Split into ...
	(tunable_set_val_if_valid_range_signed) ... this, and ...
	(tunable_set_val_if_valid_range_unsigned) ... this.
	(tunable_initialize): Call the correct one of the above based on type.

2017-01-20  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/hppa/fpu/libm-test-ulps: Remove *_tonearest entries.
	* sysdeps/ia64/fpu/libm-test-ulps: Likewise.
	* sysdeps/m68k/m680x0/fpu/libm-test-ulps: Likewise.
	* sysdeps/microblaze/libm-test-ulps: Likewise.
	* sysdeps/sh/libm-test-ulps: Likewise.

	* math/README.libm-test: Update list of characters for input and
	output types.

2017-01-20  Tulio Magno Quites Machado Filho  <tuliom@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/elision-unlock.c
	(__lll_unlock_elision): Fix adapt_count decrement.

2017-01-14  Martin Galvan  <martingalvan@sourceware.org>

	* README.pretty-printers (Known issues): Warn about printers not
	always covering everything.